--- a/static/less/book_list.less
+++ b/static/less/book_list.less
@@ -8,6 +8,7 @@ div.book-list.listview{
     margin:0 5px 0 0;
     padding:7px 0;
     // overflow:hidden;
+    position: relative;
 
 	&.row1 {
 		background:#f6f9f9;
@@ -30,6 +31,12 @@ div.book-list.listview{
 			margin-right:10px;
 			background:url("../images/booklist/booklist-vline.png") right center no-repeat;
 			float: left;
+			overflow: hidden;
+			
+			&:hover {
+				z-index: 1000;
+				overflow: visible;
+			}
 			
 			span { 
 				display:block;
@@ -200,7 +207,9 @@ ul.navigation li a:hover, ul.navigation li.active a {
 }
 
 .listview.icons {
-	float: left;
+	position: absolute;
+	right: 31px;
+	
 	.booklist-status-img {
 		.border-radius(4px, 4px, 4px, 4px);
 		background-color: #fff;
@@ -214,4 +223,8 @@ ul.navigation li a:hover, ul.navigation li.active a {
 	.booklist-status-label, .right_add {
 		display: none;
 	}
+}
+
+div.content-block-content {
+  padding-bottom: 200px;
 }
