--- a/static/less/sitewide.less
+++ b/static/less/sitewide.less
@@ -159,9 +159,9 @@ a {
 }
 
 .js-search {
-	float:right;
-	width:30%;
+	float:left;
 	padding-top:25px;
+	margin-left: 81px;
 	
 	input {
 		float: left;
