--- a/static/less/supporter_layout.less
+++ b/static/less/supporter_layout.less
@@ -210,7 +210,6 @@ ul.tabs {
 
 div.content-block-content {
   padding-left: 10px;
-  padding-bottom: 200px;
 }
 
 .js-news-text {
